routing-test/resources/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo-deployment-v1
spec:
  selector:
    matchLabels:
      app: http-echo
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: http-echo
        version: v1
    spec:
      containers:
        # this simple http server echos the command line text arg. 
        - name: http-echo
          image: hashicorp/http-echo
          ports:
            - containerPort: 8080
          args:
          - "-listen=:8080"
          - "-text='v1'"
