routing-test/resources/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: alpine
    args:
    - sleep
    - infinity
    image: alpine/curl
    imagePullPolicy: Always
