routing-test/resources/service-v1.yaml
kind: Service
apiVersion: v1
metadata:
  name: http-echo-v1
spec:
  selector:
    app: http-echo
    version: v1    
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 8080
  type: LoadBalancer
