routing-test/resources/istio.yaml

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: http-echo
spec:
  hosts:
  - http-echo # interpreted as  http-echo.routing-demo.svc.cluster.local
  http:
  - match:
    - headers:
        x-route: 
          exact: v2
    route:
    - destination:
        host: http-echo # interpreted as http-echo.routing-demo.svc.cluster.local
        subset: v2
  - route:
    - destination:
        host: http-echo # interpreted as http-echo.routing-demo.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: http-echo-destination
spec:
  host: http-echo # interpreted as http-echo.routing-demo.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
